tmux2.1+ change to for mouse setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,2 @@
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# for Tmux 2.1+, only this line is enough
+set -g mouse on
