--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,5 @@
-# for Tmux 2.1+, only this line is enough
-set -g mouse on
+# for Tmux 2.1-
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
